dfir_rs/tests/compile-fail-stable/surface_forwardref_self1.rs
../compile-fail/surface_forwardref_self1.rs